--- a/login.html
+++ b/login.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>Wissen NetBanking</title>
+</head>
+<body>
 <h2>Welcome to NetBanking</h2>
 <form>
 Username <input type="text" name="username"><br>
@@ -5,7 +11,8 @@ Password <input type="text" name="password"><br>
 <br>
 <input type="Login" value="LOGIN">
 <input type="Reset" value="RESET">
-  
-  
-  <h3>New User?</h3>
-  <input type="Register" value="INSERT">
+</form>
+<h3>New User?</h3>
+<input type="Register" value="INSERT">
+</body>
+</html>
