--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
 Username <input type="text" name="username"><br>
 Password <input type="text" name="password"><br>
 <br>
-<input type="Login" value="LOGIN">
+<input type="Submit" value="LOGIN">
 <input type="Reset" value="RESET">
 </form>
 <h3>New User?</h3>
-<input type="Register" value="INSERT">
+<input type="Submit" value="REGISTER">
 </body>
 </html>
